--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 spring.profiles.active=dev
 
-spring.data.mongodb.uri=mongodb+srv://terrabrasilis:terrabrasilis@cluster0-tht4l.mongodb.net/terrabrasilis?retryWrites=true
+spring.data.mongodb.uri=mongodb://172.18.0.1:30046/businessapi
