--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /target/
-/.mvn/wrapper/maven-wrapper.jar
-/.mvn/wrapper/maven-wrapper.properties
+.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
